# elaphure-dap.js

./: .eslintrc.js  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
device/: README.md  deviceConvert.js  deviceIndex.json  flashConvert.js
device/deviceList/AirM2M/AIR32F1/: AIR32F10X_1024.FLM  AIR32F10X_1024.json  AIR32F10x_512.FLM  AIR32F10x_512.json  Air32F103CBT6.FLM  Air32F103CBT6.json  Air32F103CCT6.FLM  Air32F103CCT6.json  Air32F103VET6.FLM  Air32F103VET6.json  Keil.AIR32F103_DFP.pdsc
device/deviceList/GigaDevice/GD32F10x/: GD32F10x_CL.json  GD32F10x_FMC_OB.json  GD32F10x_HD.json  GD32F10x_MD.json  GD32F10x_XD.json  GigaDevice.GD32F10x_DFP.pdsc
device/deviceList/HDSC/HC32F003/: HC32F003.json  HDSC.HC32F003.pdsc
src/: App.vue  config.ts  i18n.js  main.js  style.css  vitepress.css
src/components/: DeviceConnect.vue  FirmwareUpload.vue  FlashConfig.vue  content.vue  navbar.vue
src/components/composables/: data.ts  flyout.ts  langs.ts  nav.ts  site.ts  theme.ts
src/components/dap/: config.ts  download.ts  log.ts  preprocess.ts
src/components/dap/verify/: build.sh  crc.c  cross_armclang  cross_llvm  dummy.S  linker.ld  meson.build
src/components/navbar/: ELNavBarTranslations.vue  VPImage.vue  VPNav.vue  VPNavBar.vue  VPNavBarTitle.vue  VPNavScreen.vue  VPNavScreenAppearance.vue  VPNavScreenTranslations.vue  VPSocialLink.vue  VPSocialLinks.vue
src/device/: README.md  deviceConvert.js  deviceIndex.json  flashConvert.js
src/locales/: en-US.json  zh-CN.json
(+13 files in other folders)
